outros/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    PRINCIPAL
    VAZIO
    NOVA_LINHA
    E_LOGICO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> inicializacao_variaveis
Rule 6     declaracao -> declaracao_funcao
Rule 7     declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis
Rule 8     inicializacao_variaveis -> atribuicao
Rule 9     lista_variaveis -> lista_variaveis VIRGULA var
Rule 10    lista_variaveis -> var
Rule 11    var -> ID
Rule 12    var -> ID indice
Rule 13    indice -> indice ABRE_COLXETE expressao FECHA_COLXETE
Rule 14    indice -> ABRE_COLXETE expressao FECHA_COLXETE
Rule 15    tipo -> INTEIRO
Rule 16    tipo -> FLUTUANTE
Rule 17    declaracao_funcao -> tipo cabecalho
Rule 18    declaracao_funcao -> cabecalho
Rule 19    cabecalho -> ID ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM
Rule 20    lista_parametros -> lista_parametros VIRGULA lista_parametros
Rule 21    lista_parametros -> parametro
Rule 22    lista_parametros -> vazio
Rule 23    parametro -> tipo DOIS_PONTOS ID
Rule 24    parametro -> parametro ABRE_COLXETE FECHA_COLXETE
Rule 25    corpo -> corpo acao
Rule 26    corpo -> vazio
Rule 27    acao -> expressao
Rule 28    acao -> declaracao_variaveis
Rule 29    acao -> se
Rule 30    acao -> repita
Rule 31    acao -> leia
Rule 32    acao -> escreva
Rule 33    acao -> retorna
Rule 34    acao -> error
Rule 35    se -> SE expressao ENTAO corpo FIM
Rule 36    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 37    repita -> REPITA corpo ATE expressao
Rule 38    atribuicao -> var ATRIBUICAO expressao
Rule 39    leia -> LEIA ABRE_PARENTESES ID FECHA_PARENTESES
Rule 40    escreva -> ESCREVA ABRE_PARENTESES expressao FECHA_PARENTESES
Rule 41    retorna -> RETORNA ABRE_PARENTESES expressao FECHA_PARENTESES
Rule 42    expressao -> expressao_simples
Rule 43    expressao -> atribuicao
Rule 44    expressao_simples -> expressao_aditiva
Rule 45    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 46    expressao_aditiva -> expressao_multiplicativa
Rule 47    expressao_aditiva -> expressao_aditiva operador_multiplicacao expressao_unaria
Rule 48    expressao_multiplicativa -> expressao_unaria
Rule 49    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 50    expressao_unaria -> fator
Rule 51    expressao_unaria -> operador_soma fator
Rule 52    operador_relacional -> MENOR
Rule 53    operador_relacional -> MAIOR
Rule 54    operador_relacional -> IGUAL
Rule 55    operador_relacional -> MENOR_IGUAL
Rule 56    operador_relacional -> MAIOR_IGUAL
Rule 57    operador_relacional -> NEGACAO
Rule 58    operador_soma -> SOMA
Rule 59    operador_soma -> SUBTRACAO
Rule 60    operador_multiplicacao -> MULTIPLICACAO
Rule 61    operador_multiplicacao -> DIVISAO
Rule 62    fator -> ABRE_COLXETE expressao FECHA_COLXETE
Rule 63    fator -> var
Rule 64    fator -> chamada_funcao
Rule 65    fator -> numero
Rule 66    numero -> INTEIRO
Rule 67    numero -> FLUTUANTE
Rule 68    chamada_funcao -> ID ABRE_PARENTESES lista_argumentos FECHA_PARENTESES
Rule 69    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 70    lista_argumentos -> expressao
Rule 71    lista_argumentos -> vazio
Rule 72    vazio -> <empty>

Terminals, with rules where they appear

ABRE_COLXETE         : 13 14 24 62
ABRE_PARENTESES      : 19 39 40 41 68
ATE                  : 37
ATRIBUICAO           : 38
DIVISAO              : 61
DOIS_PONTOS          : 7 23
ENTAO                : 35 36
ESCREVA              : 40
E_LOGICO             : 
FECHA_COLXETE        : 13 14 24 62
FECHA_PARENTESES     : 19 39 40 41 68
FIM                  : 19 35 36
FLUTUANTE            : 16 67
ID                   : 11 12 19 23 39 68
IGUAL                : 54
INTEIRO              : 15 66
LEIA                 : 39
MAIOR                : 53
MAIOR_IGUAL          : 56
MENOR                : 52
MENOR_IGUAL          : 55
MULTIPLICACAO        : 60
NEGACAO              : 57
NOVA_LINHA           : 
PRINCIPAL            : 
REPITA               : 37
RETORNA              : 41
SE                   : 35 36
SENAO                : 36
SOMA                 : 58
SUBTRACAO            : 59
VAZIO                : 
VIRGULA              : 9 20 69
error                : 34

Nonterminals, with rules where they appear

acao                 : 25
atribuicao           : 8 43
cabecalho            : 17 18
chamada_funcao       : 64
corpo                : 19 25 35 36 36 37
declaracao           : 2 3
declaracao_funcao    : 6
declaracao_variaveis : 4 28
escreva              : 32
expressao            : 13 14 27 35 36 37 38 40 41 62 69 70
expressao_aditiva    : 44 45 47
expressao_multiplicativa : 46 49
expressao_simples    : 42 45
expressao_unaria     : 47 48 49
fator                : 50 51
indice               : 12 13
inicializacao_variaveis : 5
leia                 : 31
lista_argumentos     : 68 69
lista_declaracoes    : 1 2
lista_parametros     : 19 20 20
lista_variaveis      : 7 9
numero               : 65
operador_multiplicacao : 47 49
operador_relacional  : 45
operador_soma        : 51
parametro            : 21 24
programa             : 0
repita               : 30
retorna              : 33
se                   : 29
tipo                 : 7 17 23
var                  : 9 10 38 63
vazio                : 22 26 71

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (38) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . ID ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    INTEIRO         shift and go to state 5
    FLUTUANTE       shift and go to state 12
    ID              shift and go to state 9

    declaracao                     shift and go to state 7
    cabecalho                      shift and go to state 8
    inicializacao_variaveis        shift and go to state 1
    tipo                           shift and go to state 2
    programa                       shift and go to state 10
    declaracao_funcao              shift and go to state 3
    declaracao_variaveis           shift and go to state 11
    var                            shift and go to state 4
    lista_declaracoes              shift and go to state 13
    atribuicao                     shift and go to state 6

state 1

    (5) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 5 (declaracao -> inicializacao_variaveis .)


state 2

    (7) declaracao_variaveis -> tipo . DOIS_PONTOS lista_variaveis
    (17) declaracao_funcao -> tipo . cabecalho
    (19) cabecalho -> . ID ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM

    DOIS_PONTOS     shift and go to state 16
    ID              shift and go to state 14

    cabecalho                      shift and go to state 15

state 3

    (6) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 6 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 6 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 6 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcao .)


state 4

    (38) atribuicao -> var . ATRIBUICAO expressao

    ATRIBUICAO      shift and go to state 17


state 5

    (15) tipo -> INTEIRO .

    DOIS_PONTOS     reduce using rule 15 (tipo -> INTEIRO .)
    ID              reduce using rule 15 (tipo -> INTEIRO .)


state 6

    (8) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 8 (inicializacao_variaveis -> atribuicao .)


state 7

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 8

    (18) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 18 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 18 (declaracao_funcao -> cabecalho .)
    ID              reduce using rule 18 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 18 (declaracao_funcao -> cabecalho .)


state 9

    (19) cabecalho -> ID . ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM
    (11) var -> ID .
    (12) var -> ID . indice
    (13) indice -> . indice ABRE_COLXETE expressao FECHA_COLXETE
    (14) indice -> . ABRE_COLXETE expressao FECHA_COLXETE

    ABRE_PARENTESES shift and go to state 19
    ATRIBUICAO      reduce using rule 11 (var -> ID .)
    ABRE_COLXETE    shift and go to state 20

    indice                         shift and go to state 18

state 10

    (0) S' -> programa .



state 11

    (4) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 4 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 12

    (16) tipo -> FLUTUANTE .

    DOIS_PONTOS     reduce using rule 16 (tipo -> FLUTUANTE .)
    ID              reduce using rule 16 (tipo -> FLUTUANTE .)


state 13

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (38) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . ID ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 5
    FLUTUANTE       shift and go to state 12
    ID              shift and go to state 9

    declaracao                     shift and go to state 21
    cabecalho                      shift and go to state 8
    inicializacao_variaveis        shift and go to state 1
    tipo                           shift and go to state 2
    declaracao_funcao              shift and go to state 3
    declaracao_variaveis           shift and go to state 11
    var                            shift and go to state 4
    atribuicao                     shift and go to state 6

state 14

    (19) cabecalho -> ID . ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM

    ABRE_PARENTESES shift and go to state 19


state 15

    (17) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    ID              reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)


state 16

    (7) declaracao_variaveis -> tipo DOIS_PONTOS . lista_variaveis
    (9) lista_variaveis -> . lista_variaveis VIRGULA var
    (10) lista_variaveis -> . var
    (11) var -> . ID
    (12) var -> . ID indice

    ID              shift and go to state 24

    lista_variaveis                shift and go to state 23
    var                            shift and go to state 22

state 17

    (38) atribuicao -> var ATRIBUICAO . expressao
    (42) expressao -> . expressao_simples
    (43) expressao -> . atribuicao
    (44) expressao_simples -> . expressao_aditiva
    (45) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (38) atribuicao -> . var ATRIBUICAO expressao
    (46) expressao_aditiva -> . expressao_multiplicativa
    (47) expressao_aditiva -> . expressao_aditiva operador_multiplicacao expressao_unaria
    (11) var -> . ID
    (12) var -> . ID indice
    (48) expressao_multiplicativa -> . expressao_unaria
    (49) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (50) expressao_unaria -> . fator
    (51) expressao_unaria -> . operador_soma fator
    (62) fator -> . ABRE_COLXETE expressao FECHA_COLXETE
    (63) fator -> . var
    (64) fator -> . chamada_funcao
    (65) fator -> . numero
    (58) operador_soma -> . SOMA
    (59) operador_soma -> . SUBTRACAO
    (68) chamada_funcao -> . ID ABRE_PARENTESES lista_argumentos FECHA_PARENTESES
    (66) numero -> . INTEIRO
    (67) numero -> . FLUTUANTE

    ID              shift and go to state 39
    ABRE_COLXETE    shift and go to state 28
    SOMA            shift and go to state 41
    SUBTRACAO       shift and go to state 38
    INTEIRO         shift and go to state 33
    FLUTUANTE       shift and go to state 36

    var                            shift and go to state 35
    expressao_aditiva              shift and go to state 25
    operador_soma                  shift and go to state 26
    expressao_simples              shift and go to state 27
    expressao                      shift and go to state 37
    expressao_multiplicativa       shift and go to state 30
    fator                          shift and go to state 31
    expressao_unaria               shift and go to state 32
    chamada_funcao                 shift and go to state 29
    numero                         shift and go to state 40
    atribuicao                     shift and go to state 34

state 18

    (12) var -> ID indice .
    (13) indice -> indice . ABRE_COLXETE expressao FECHA_COLXETE

  ! shift/reduce conflict for ABRE_COLXETE resolved as shift
    VIRGULA         reduce using rule 12 (var -> ID indice .)
    INTEIRO         reduce using rule 12 (var -> ID indice .)
    FLUTUANTE       reduce using rule 12 (var -> ID indice .)
    ID              reduce using rule 12 (var -> ID indice .)
    $end            reduce using rule 12 (var -> ID indice .)
    FIM             reduce using rule 12 (var -> ID indice .)
    error           reduce using rule 12 (var -> ID indice .)
    SE              reduce using rule 12 (var -> ID indice .)
    REPITA          reduce using rule 12 (var -> ID indice .)
    LEIA            reduce using rule 12 (var -> ID indice .)
    ESCREVA         reduce using rule 12 (var -> ID indice .)
    RETORNA         reduce using rule 12 (var -> ID indice .)
    SOMA            reduce using rule 12 (var -> ID indice .)
    SUBTRACAO       reduce using rule 12 (var -> ID indice .)
    ATE             reduce using rule 12 (var -> ID indice .)
    SENAO           reduce using rule 12 (var -> ID indice .)
    MULTIPLICACAO   reduce using rule 12 (var -> ID indice .)
    DIVISAO         reduce using rule 12 (var -> ID indice .)
    MENOR           reduce using rule 12 (var -> ID indice .)
    MAIOR           reduce using rule 12 (var -> ID indice .)
    IGUAL           reduce using rule 12 (var -> ID indice .)
    MENOR_IGUAL     reduce using rule 12 (var -> ID indice .)
    MAIOR_IGUAL     reduce using rule 12 (var -> ID indice .)
    NEGACAO         reduce using rule 12 (var -> ID indice .)
    FECHA_COLXETE   reduce using rule 12 (var -> ID indice .)
    FECHA_PARENTESES reduce using rule 12 (var -> ID indice .)
    ENTAO           reduce using rule 12 (var -> ID indice .)
    ATRIBUICAO      reduce using rule 12 (var -> ID indice .)
    ABRE_COLXETE    shift and go to state 42

  ! ABRE_COLXETE    [ reduce using rule 12 (var -> ID indice .) ]


state 19

    (19) cabecalho -> ID ABRE_PARENTESES . lista_parametros FECHA_PARENTESES corpo FIM
    (20) lista_parametros -> . lista_parametros VIRGULA lista_parametros
    (21) lista_parametros -> . parametro
    (22) lista_parametros -> . vazio
    (23) parametro -> . tipo DOIS_PONTOS ID
    (24) parametro -> . parametro ABRE_COLXETE FECHA_COLXETE
    (72) vazio -> .
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE

    FECHA_PARENTESES reduce using rule 72 (vazio -> .)
    VIRGULA         reduce using rule 72 (vazio -> .)
    INTEIRO         shift and go to state 5
    FLUTUANTE       shift and go to state 12

    tipo                           shift and go to state 43
    parametro                      shift and go to state 45
    vazio                          shift and go to state 44
    lista_parametros               shift and go to state 46

state 20

    (14) indice -> ABRE_COLXETE . expressao FECHA_COLXETE
    (42) expressao -> . expressao_simples
    (43) expressao -> . atribuicao
    (44) expressao_simples -> . expressao_aditiva
    (45) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (38) atribuicao -> . var ATRIBUICAO expressao
    (46) expressao_aditiva -> . expressao_multiplicativa
    (47) expressao_aditiva -> . expressao_aditiva operador_multiplicacao expressao_unaria
    (11) var -> . ID
    (12) var -> . ID indice
    (48) expressao_multiplicativa -> . expressao_unaria
    (49) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (50) expressao_unaria -> . fator
    (51) expressao_unaria -> . operador_soma fator
    (62) fator -> . ABRE_COLXETE expressao FECHA_COLXETE
    (63) fator -> . var
    (64) fator -> . chamada_funcao
    (65) fator -> . numero
    (58) operador_soma -> . SOMA
    (59) operador_soma -> . SUBTRACAO
    (68) chamada_funcao -> . ID ABRE_PARENTESES lista_argumentos FECHA_PARENTESES
    (66) numero -> . INTEIRO
    (67) numero -> . FLUTUANTE

    ID              shift and go to state 39
    ABRE_COLXETE    shift and go to state 28
    SOMA            shift and go to state 41
    SUBTRACAO       shift and go to state 38
    INTEIRO         shift and go to state 33
    FLUTUANTE       shift and go to state 36

    var                            shift and go to state 35
    expressao_aditiva              shift and go to state 25
    operador_soma                  shift and go to state 26
    expressao_simples              shift and go to state 27
    expressao                      shift and go to state 47
    expressao_multiplicativa       shift and go to state 30
    fator                          shift and go to state 31
    expressao_unaria               shift and go to state 32
    chamada_funcao                 shift and go to state 29
    numero                         shift and go to state 40
    atribuicao                     shift and go to state 34

state 21

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 22

    (10) lista_variaveis -> var .

    VIRGULA         reduce using rule 10 (lista_variaveis -> var .)
    INTEIRO         reduce using rule 10 (lista_variaveis -> var .)
    FLUTUANTE       reduce using rule 10 (lista_variaveis -> var .)
    ID              reduce using rule 10 (lista_variaveis -> var .)
    $end            reduce using rule 10 (lista_variaveis -> var .)
    FIM             reduce using rule 10 (lista_variaveis -> var .)
    error           reduce using rule 10 (lista_variaveis -> var .)
    SE              reduce using rule 10 (lista_variaveis -> var .)
    REPITA          reduce using rule 10 (lista_variaveis -> var .)
    LEIA            reduce using rule 10 (lista_variaveis -> var .)
    ESCREVA         reduce using rule 10 (lista_variaveis -> var .)
    RETORNA         reduce using rule 10 (lista_variaveis -> var .)
    ABRE_COLXETE    reduce using rule 10 (lista_variaveis -> var .)
    SOMA            reduce using rule 10 (lista_variaveis -> var .)
    SUBTRACAO       reduce using rule 10 (lista_variaveis -> var .)
    ATE             reduce using rule 10 (lista_variaveis -> var .)
    SENAO           reduce using rule 10 (lista_variaveis -> var .)


state 23

    (7) declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .
    (9) lista_variaveis -> lista_variaveis . VIRGULA var

    INTEIRO         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    FLUTUANTE       reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ID              reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    $end            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    FIM             reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SENAO           reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    error           reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SE              reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    REPITA          reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    LEIA            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ESCREVA         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    RETORNA         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ABRE_COLXETE    reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SOMA            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SUBTRACAO       reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ATE             reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    VIRGULA         shift and go to state 48


state 24

    (11) var -> ID .
    (12) var -> ID . indice
    (13) indice -> . indice ABRE_COLXETE expressao FECHA_COLXETE
    (14) indice -> . ABRE_COLXETE expressao FECHA_COLXETE

  ! shift/reduce conflict for ABRE_COLXETE resolved as shift
    VIRGULA         reduce using rule 11 (var -> ID .)
    INTEIRO         reduce using rule 11 (var -> ID .)
    FLUTUANTE       reduce using rule 11 (var -> ID .)
    ID              reduce using rule 11 (var -> ID .)
    $end            reduce using rule 11 (var -> ID .)
    FIM             reduce using rule 11 (var -> ID .)
    error           reduce using rule 11 (var -> ID .)
    SE              reduce using rule 11 (var -> ID .)
    REPITA          reduce using rule 11 (var -> ID .)
    LEIA            reduce using rule 11 (var -> ID .)
    ESCREVA         reduce using rule 11 (var -> ID .)
    RETORNA         reduce using rule 11 (var -> ID .)
    SOMA            reduce using rule 11 (var -> ID .)
    SUBTRACAO       reduce using rule 11 (var -> ID .)
    ATE             reduce using rule 11 (var -> ID .)
    SENAO           reduce using rule 11 (var -> ID .)
    ABRE_COLXETE    shift and go to state 20

  ! ABRE_COLXETE    [ reduce using rule 11 (var -> ID .) ]

    indice                         shift and go to state 18

state 25

    (44) expressao_simples -> expressao_aditiva .
    (47) expressao_aditiva -> expressao_aditiva . operador_multiplicacao expressao_unaria
    (60) operador_multiplicacao -> . MULTIPLICACAO
    (61) operador_multiplicacao -> . DIVISAO

    MENOR           reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    MAIOR           reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    IGUAL           reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    MENOR_IGUAL     reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    MAIOR_IGUAL     reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    NEGACAO         reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    FECHA_COLXETE   reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    FECHA_PARENTESES reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    INTEIRO         reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    FLUTUANTE       reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    ID              reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    $end            reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    VIRGULA         reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    FIM             reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    error           reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    SE              reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    REPITA          reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    LEIA            reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    ESCREVA         reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    RETORNA         reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    ABRE_COLXETE    reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    SOMA            reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    SUBTRACAO       reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    ENTAO           reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    ATE             reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    SENAO           reduce using rule 44 (expressao_simples -> expressao_aditiva .)
    MULTIPLICACAO   shift and go to state 51
    DIVISAO         shift and go to state 50

    operador_multiplicacao         shift and go to state 49

state 26

    (51) expressao_unaria -> operador_soma . fator
    (62) fator -> . ABRE_COLXETE expressao FECHA_COLXETE
    (63) fator -> . var
    (64) fator -> . chamada_funcao
    (65) fator -> . numero
    (11) var -> . ID
    (12) var -> . ID indice
    (68) chamada_funcao -> . ID ABRE_PARENTESES lista_argumentos FECHA_PARENTESES
    (66) numero -> . INTEIRO
    (67) numero -> . FLUTUANTE

    ABRE_COLXETE    shift and go to state 28
    ID              shift and go to state 39
    INTEIRO         shift and go to state 33
    FLUTUANTE       shift and go to state 36

    fator                          shift and go to state 53
    var                            shift and go to state 52
    chamada_funcao                 shift and go to state 29
    numero                         shift and go to state 40

state 27

    (42) expressao -> expressao_simples .
    (45) expressao_simples -> expressao_simples . operador_relacional expressao_aditiva
    (52) operador_relacional -> . MENOR
    (53) operador_relacional -> . MAIOR
    (54) operador_relacional -> . IGUAL
    (55) operador_relacional -> . MENOR_IGUAL
    (56) operador_relacional -> . MAIOR_IGUAL
    (57) operador_relacional -> . NEGACAO

    FECHA_COLXETE   reduce using rule 42 (expressao -> expressao_simples .)
    INTEIRO         reduce using rule 42 (expressao -> expressao_simples .)
    FLUTUANTE       reduce using rule 42 (expressao -> expressao_simples .)
    ID              reduce using rule 42 (expressao -> expressao_simples .)
    $end            reduce using rule 42 (expressao -> expressao_simples .)
    FECHA_PARENTESES reduce using rule 42 (expressao -> expressao_simples .)
    VIRGULA         reduce using rule 42 (expressao -> expressao_simples .)
    FIM             reduce using rule 42 (expressao -> expressao_simples .)
    error           reduce using rule 42 (expressao -> expressao_simples .)
    SE              reduce using rule 42 (expressao -> expressao_simples .)
    REPITA          reduce using rule 42 (expressao -> expressao_simples .)
    LEIA            reduce using rule 42 (expressao -> expressao_simples .)
    ESCREVA         reduce using rule 42 (expressao -> expressao_simples .)
    RETORNA         reduce using rule 42 (expressao -> expressao_simples .)
    ABRE_COLXETE    reduce using rule 42 (expressao -> expressao_simples .)
    SOMA            reduce using rule 42 (expressao -> expressao_simples .)
    SUBTRACAO       reduce using rule 42 (expressao -> expressao_simples .)
    ENTAO           reduce using rule 42 (expressao -> expressao_simples .)
    ATE             reduce using rule 42 (expressao -> expressao_simples .)
    SENAO           reduce using rule 42 (expressao -> expressao_simples .)
    MENOR           shift and go to state 54
    MAIOR           shift and go to state 57
    IGUAL           shift and go to state 58
    MENOR_IGUAL     shift and go to state 55
    MAIOR_IGUAL     shift and go to state 60
    NEGACAO         shift and go to state 56

    operador_relacional            shift and go to state 59

state 28

    (62) fator -> ABRE_COLXETE . expressao FECHA_COLXETE
    (42) expressao -> . expressao_simples
    (43) expressao -> . atribuicao
    (44) expressao_simples -> . expressao_aditiva
    (45) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (38) atribuicao -> . var ATRIBUICAO expressao
    (46) expressao_aditiva -> . expressao_multiplicativa
    (47) expressao_aditiva -> . expressao_aditiva operador_multiplicacao expressao_unaria
    (11) var -> . ID
    (12) var -> . ID indice
    (48) expressao_multiplicativa -> . expressao_unaria
    (49) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (50) expressao_unaria -> . fator
    (51) expressao_unaria -> . operador_soma fator
    (62) fator -> . ABRE_COLXETE expressao FECHA_COLXETE
    (63) fator -> . var
    (64) fator -> . chamada_funcao
    (65) fator -> . numero
    (58) operador_soma -> . SOMA
    (59) operador_soma -> . SUBTRACAO
    (68) chamada_funcao -> . ID ABRE_PARENTESES lista_argumentos FECHA_PARENTESES
    (66) numero -> . INTEIRO
    (67) numero -> . FLUTUANTE

    ID              shift and go to state 39
    ABRE_COLXETE    shift and go to state 28
    SOMA            shift and go to state 41
    SUBTRACAO       shift and go to state 38
    INTEIRO         shift and go to state 33
    FLUTUANTE       shift and go to state 36

    var                            shift and go to state 35
    expressao_aditiva              shift and go to state 25
    operador_soma                  shift and go to state 26
    expressao_simples              shift and go to state 27
    expressao                      shift and go to state 61
    expressao_multiplicativa       shift and go to state 30
    fator                          shift and go to state 31
    expressao_unaria               shift and go to state 32
    chamada_funcao                 shift and go to state 29
    numero                         shift and go to state 40
    atribuicao                     shift and go to state 34

state 29

    (64) fator -> chamada_funcao .
